# quoridor-bot

./: .gitignore  README.md  game_config.py  gym.py  main.py  mcts.py  nn.py  pyproject.toml  replay_buffer.py  run.py  test_alphazero_ttt.py  tic_tac_toe.py
alphazero/: checkpoint.py  game_config.py  mcts.py  nn.py  notebook.ipynb  quoridor.py  quoridor_cpp.py  run.py  test_alphazero_quoridor.py  test_alphazero_ttt.py  test_cpp_backend.py
play/: agent.py  index.html  server.py
quoridor/: bindings.cpp  build_ext.py  main.cpp  quoridor.cpp  quoridor.h
simulation/: main.cpp  quoridor.cpp
