[project]
name = "quoridor-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "ipython>=9.14.1",
    "keras>=3.14.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "tensorflow>=2.21.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "pybind11>=3.0.4",
    "ziglang>=0.16.0",
]
